# mlops-standard-demo

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mlops_standard_demo/: __init__.py  dataset.py  plots.py
mlops_standard_demo/modeling/: predict.py  train.py
src/mlops_standard_demo/: features.py
src/mlops_standard_demo/data/: dataset.py  make_dataset.py
src/mlops_standard_demo/models/: train_model.py
tests/: test_data.py
