[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_standard_demo"
version = "0.0.1"
description = "A standardized MLOps project structure example."
authors = [
  { name = "Joel" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

[tool.ruff]
line-length = 99
src = ["mlops_standard_demo"]
include = ["pyproject.toml", "mlops_standard_demo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_standard_demo"]
force-sort-within-sections = true

